--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/deb4e62b44.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="nav1">
@@ -110,6 +110,7 @@
                 <article class="size1 left">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-1.jpg">
+                        <div class="p-background"></div>
                         <div class="p-text">
                             <h4>Love</h4>
                             <p>Web</p>
@@ -119,6 +120,7 @@
                 <article class="size2 right">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-2.jpg">
+                        <div class="p-background"></div>
                         <div class="p-text">
                             <h4>Beautiful Girl</h4>
                             <p>Brand</p>
@@ -128,6 +130,7 @@
                 <article class="size1 right">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-3.jpg">
+                        <div class="p-background"></div>
                         <div class="p-text">
                             <h4>Future City</h4>
                             <p>Web</p>
@@ -137,6 +140,7 @@
                 <article class="size1 left">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-4.jpg">
+                        <div class="p-background"></div>
                         <div class="p-text">
                             <h4>Golden Gate Bridge</h4>
                             <p>Design</p>
@@ -146,6 +150,7 @@
                 <article class="size2 right">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-9.jpg">
+                        <div class="p-background"></div>
                         <div class="p-text">
                             <h4>Beach</h4>
                             <p>Web</p>
@@ -155,6 +160,7 @@
                 <article class="size2 left">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-6.jpg">
+                        <div class="p-background"></div>
                         <div class="p-text">
                             <h4>Mountains</h4>
                             <p>Web</p>
@@ -164,6 +170,7 @@
                 <article class="size2 right">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-10.jpg">
+                        <div class="p-background"></div>
                         <div class="p-text">
                             <h4>Adventure</h4>
                             <p>Web</p>
@@ -173,6 +180,7 @@
                 <article class="size2 left">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-11.jpg">
+                        <div class="p-background"></div>
                         <div class="p-text">
                             <h4>Waterfall</h4>
                             <p>Web</p>
@@ -182,6 +190,7 @@
                 <article class="size2 right">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-5.jpg">
+                        <div class="p-background"></div>
                         <div class="p-text">
                             <h4>Sea</h4>
                             <p>Web</p>
