--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -49,6 +49,7 @@
     </div>
     <div id="blockbody">
         <button id="button3"><i class="fas fa-times"></i></button>
+        <a id="button6" href="#name"><i class="fas fa-angle-up"></i></a>
         <div id="name">
             <div class="container">
                 <h1 class="title">About Me</h1>
