--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -47,6 +47,7 @@
         <p class="note">© 2018 Petri - All Rights Reserved</p>
         <div class="bg"></div>
     </div>
+    <div id="blockbody-bg"></div>
     <div id="blockbody">
         <button id="button3"><i class="fas fa-times"></i></button>
         <a id="button6" href="#name"><i class="fas fa-angle-up"></i></a>
@@ -234,8 +235,8 @@
                 </table>
                 <div id="input">
                     <div id="input1">
-                        <input class="input1a" type="text" placeholder="Enter your name">
-                        <input class="input1b" type="text" placeholder="Enter your email address">
+                        <input id="input1a" type="text" placeholder="Enter your name">
+                        <input id="input1b" type="text" placeholder="Enter your email address">
                     </div>
                     <input id="input2" type="text" placeholder="Subject (Optional)">
                     <textarea id="input3" type="text" placeholder="Here go your message"></textarea>
