--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -244,6 +244,15 @@
                 <button id="button5">Send message</button>
             </div>  
         </div>
+        <div id="foot">
+            <div class="icon3">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-pinterest"></i>
+            </div>
+            <p class="note2">© 2018 Petri - All Rights Reserved</p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
