--- a/BT_S-Group/BT_Hover/index.html
+++ b/BT_S-Group/BT_Hover/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <div class="block block1">
-        <img src="https://tympanus.net/Development/HoverEffectIdeas/img/26.jpg" alt="">
+        <img id="img1" src="https://tympanus.net/Development/HoverEffectIdeas/img/26.jpg" alt="">
         <div class="foot">
-            <h2>Creative <span class="bold">Zoe</span></h2>
+            <h2 class="title1">Creative <span class="bold">Zoe</span></h2>
             <div class="icon">
                 <a href="#" class="icon1"><i class="fas fa-paperclip"></i></a>
                 <a href="#" class="icon1"><i class="far fa-eye"></i></a>
@@ -23,17 +23,18 @@
         </div>    
         <p class="text">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
     </div>
-    <div class="block">
-        <img src="https://tympanus.net/Development/HoverEffectIdeas/img/26.jpg" alt="">
-        <div class="text">
-            <h2>Creative <span>Zoe</span></h2>
-            <p class="icon-links">
-                <a href="#"><span class="icon-heart"></span></a>
-                <a href="#"><span class="icon-eye"></span></a>
-                <a href="#"><span class="icon-paper-clip"></span></a>
-            </p>
-            <p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+    <div class="block block2">
+        <img id="img2" src="https://tympanus.net/Development/HoverEffectIdeas/img/1.jpg" alt="">
+        <div class="bg"></div>
+        <div class="text2">
+            <h2 class="title2">Nice <span class="bold">LILY</span></h2>
+            <p class="text3">Lily likes to play with crayons and pencils</p>
         </div>
+    </div>
+    <div class="block block3">
+        <img id="img3" src="https://tympanus.net/Development/HoverEffectIdeas/img/31.jpg" alt="">
+        <h2 class="title3">HAPPY <span class="bold">SELENA</span></h2>
+        <p class="text4">Selena is a tiny-winned bird</p>
     </div>
 </body>
 </html>
