--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="nav1">
@@ -64,32 +67,32 @@
                 <table id="table1">
                     <tbody>
                         <tr>
-                            <td>
-                                <i class="icon2 fas fa-stopwatch"></i>
+                            <td id="c1a">
+                                <i class="icon2 fas fa-stopwatch" id="c1b"></i>
                                 <h2>Launch Quickly</h2>
                             </td>
-                            <td>
-                                <i class="icon2 fas fa-brush"></i>
+                            <td id="c2a">
+                                <i class="icon2 fas fa-brush" id="c2b"></i>
                                 <h2>Stylish Design</h2>
                             </td>
                         </tr>
                         <tr>
-                            <td>
-                                <i class="icon2 fas fa-book-open"></i>
+                            <td id="c3a"> 
+                                <i class="icon2 fas fa-book-open" id="c3b"></i>
                                 <h2>Well Documented</h2>
                             </td>
-                            <td>
-                                <i class="icon2 fas fa-layer-group"></i>
+                            <td id="c4a">
+                                <i class="icon2 fas fa-layer-group" id="c4b"></i>
                                 <h2>Multiple Styles</h2>
                             </td>
                         </tr>
                         <tr>
-                            <td>
-                                <i class="icon2 fas fa-cog"></i>
+                            <td id="c5a">
+                                <i class="icon2 fas fa-cog" id="c5b"></i>
                                 <h2>Fully Customizable</h2>
                             </td>
-                            <td>
-                                <i class="icon2 fas fa-headphones"></i>
+                            <td id="c6a">
+                                <i class="icon2 fas fa-headphones" id="c6b"></i>
                                 <h2>Friendly Support</h2>
                             </td>
                         </tr>
@@ -109,8 +112,8 @@
                 </div>
             </div>
             <div id="galery">
-                <article class="size1 left">
-                    <a class="blog" href="">
+                <article class="size1 left" id="i1a">
+                    <a class="blog">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-1.jpg">
                         <div class="p-background"></div>
                         <div class="p-text">
@@ -119,8 +122,8 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 right">
-                    <a class="blog" href="">
+                <article class="size2 right" id="i2a">
+                    <a class="blog">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-2.jpg">
                         <div class="p-background"></div>
                         <div class="p-text">
@@ -129,8 +132,8 @@
                         </div>
                     </a>
                 </article>
-                <article class="size1 right">
-                    <a class="blog" href="">
+                <article class="size1 right" id="i3a">
+                    <a class="blog">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-3.jpg">
                         <div class="p-background"></div>
                         <div class="p-text">
@@ -139,8 +142,8 @@
                         </div>
                     </a>
                 </article>
-                <article class="size1 left">
-                    <a class="blog" href="">
+                <article class="size1 left" id="i4a">
+                    <a class="blog">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-4.jpg">
                         <div class="p-background"></div>
                         <div class="p-text">
@@ -149,8 +152,8 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 right">
-                    <a class="blog" href="">
+                <article class="size2 right" id="i5a">
+                    <a class="blog">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-9.jpg">
                         <div class="p-background"></div>
                         <div class="p-text">
@@ -159,8 +162,8 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 left">
-                    <a class="blog" href="">
+                <article class="size2 left" id="i6a">
+                    <a class="blog">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-6.jpg">
                         <div class="p-background"></div>
                         <div class="p-text">
@@ -169,8 +172,8 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 right">
-                    <a class="blog" href="">
+                <article class="size2 right" id="i7a">
+                    <a class="blog">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-10.jpg">
                         <div class="p-background"></div>
                         <div class="p-text">
@@ -179,8 +182,8 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 left">
-                    <a class="blog" href="">
+                <article class="size2 left" id="i8a">
+                    <a class="blog">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-11.jpg">
                         <div class="p-background"></div>
                         <div class="p-text">
@@ -189,8 +192,8 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 right">
-                    <a class="blog" href="">
+                <article class="size2 right" id="i9a">
+                    <a class="blog">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-5.jpg">
                         <div class="p-background"></div>
                         <div class="p-text">
@@ -254,6 +257,63 @@
             <p class="note2">© 2018 Petri - All Rights Reserved</p>
         </div>
     </div>
+    <div id="carouselExampleFade" class="carousel">
+         <div class="carousel-inner">
+            <div class="carousel-item" id="i1b">
+                <button class="button7" id="i1c"><i class="fas fa-times"></i></button>
+                <img src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-1.jpg" class="d-block">
+                <p class="text3">1 of 9</p>
+            </div>
+            <div class="carousel-item" id="i2b">
+                <button class="button7" id="i2c"><i class="fas fa-times"></i></button>
+                <img src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-2.jpg" class="d-block">
+                <p class="text3">2 of 9</p>
+            </div>
+            <div class="carousel-item" id="i3b">
+                <button class="button7" id="i3c"><i class="fas fa-times"></i></button>
+                <img src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-3.jpg" class="d-block">
+                <p class="text3">3 of 9</p>
+            </div>
+            <div class="carousel-item" id="i4b">
+                <button class="button7" id="i4c"><i class="fas fa-times"></i></button>
+                <img src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-4.jpg" class="d-block">
+                <p class="text3">4 of 9</p>
+            </div>
+            <div class="carousel-item" id="i5b">
+                <button class="button7" id="i5c"><i class="fas fa-times"></i></button>
+                <img src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-9.jpg" class="d-block">
+                <p class="text3">5 of 9</p>
+            </div>
+            <div class="carousel-item" id="i6b">
+                <button class="button7" id="i6c"><i class="fas fa-times"></i></button>
+                <img src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-6.jpg" class="d-block">
+                <p class="text3">6 of 9</p>
+            </div>
+            <div class="carousel-item" id="i7b">
+                <button class="button7" id="i7c"><i class="fas fa-times"></i></button>
+                <img src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-10.jpg" class="d-block">
+                <p class="text3">7 of 9</p>
+            </div>
+            <div class="carousel-item" id="i8b">
+                <button class="button7" id="i8c"><i class="fas fa-times"></i></button>
+                <img src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-11.jpg" class="d-block">
+                <p class="text3">8 of 9</p>
+            </div>
+            <div class="carousel-item" id="i9b">
+                <button class="button7" id="i9c"><i class="fas fa-times"></i></button>
+                <img src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-5.jpg" class="d-block">
+                <p class="text3">9 of 9</p>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
     <script src="script.js"></script>
 </body>
 </html>
