--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -18,9 +18,9 @@
     <div class="nav1">
             <img src="https://preview.erilisdesign.com/html/petri/assets/images/logo.png" alt="">
             <button id="bar" type="button">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span id="na"></span>
+                <span id="nb"></span>
+                <span id="nc"></span>
             </button>
         </div>
     <div class="nav2">
